# Deus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Licence.txt  README.md  bootstrap.env  run_performance_tests_linux.sh  run_unit_tests_linux.sh
docs/doxygen/: config  customdoxygen.css  header.html  layout.xml
src/cpp/deus/: API.h  CInterface.h  Constants.cpp  Constants.hpp  Exceptions.hpp  StaticRequirements.hpp  UnicodeStorage.cpp  UnicodeStorage.hpp  UnicodeView.cpp  UnicodeView.hpp  __deus.hpp
src/cpp/deus/unicode_view_impl/: ASCIIComputeByteLength.inl  ASCIIFromCodePoint.inl  ASCIIImpl.cpp  ASCIIImpl.hpp  EncodingImpl.cpp  EncodingImpl.hpp  GenericFind.inl  GenericFindAll.inl  GenericRFind.inl  UTF8ByteToSymbolIndex.inl  UTF8ComputeByteLength.inl  UTF8ComputeSymbolLength.inl  UTF8ConvertToASCII.inl  UTF8FromCodePoint.inl  UTF8Impl.cpp  UTF8Impl.hpp  UTF8SymbolToByteIndex.inl  UTF8Util.inl
src/cpp/deus/util/: Intrinsics.hpp  SIMDUtil.hpp
tests/performance/cpp/: ASCIIComputeByteLength_PerformanceTest.cpp  ComputeByteLength_PerformanceTest.cpp  ComputeByteLength_TestSuite.cpp  HelloWorld_TestSuite.cpp  PerformanceTestsUtil.cpp  PerformanceTestsUtil.hpp  Proto_TestSuite.cpp  UTF8Impl_TestSuite.cpp
tests/performance/cpp/byte_to_symbol_index/: UTF8ByteToSymbolIndex_PerformanceTest.cpp
tests/performance/cpp/compute_byte_length/: ASCIIComputeByteLength_PerformanceTest.cpp  UTF8ComputeByteLength_PerformanceTest.cpp
tests/performance/cpp/compute_symbol_length/: UTF8ComputeSymbolLength_PerformanceTest.cpp
tests/performance/cpp/symbol_to_byte_index/: UTF8SymbolToByteIndex_PerformanceTest.cpp
tests/unit/cpp/: ASCIIComputeByteLength_UnitTest.cpp  ASCIIImpl_TestSuite.cpp  ComputeByteLength_UnitTest.cpp  TestsMain.cpp  UTF8ComputeByteLength_UnitTest.cpp  UTF8Impl_TestSuite.cpp  UnicodeView_TestSuite.cpp  UnicodeView_UnitTest.cpp
tests/unit/cpp/byte_to_symbol_index/: UTF8ByteToSymbolIndex_UnitTest.cpp
tests/unit/cpp/compute_byte_length/: ASCIIComputeByteLength_UnitTest.cpp  UTF8ComputeByteLength_UnitTest.cpp
tests/unit/cpp/compute_symbol_length/: UTF8ComputeSymbolLength_UnitTest.cpp
tests/unit/cpp/concatenate/: ASCIIConcatenate_UnitTest.cpp  UTF8Concatenate_UnitTest.cpp
tests/unit/cpp/convert/: UTF8ConvertToASCII_UnitTest.cpp
tests/unit/cpp/find/: ASCIIFind_UnitTest.cpp  UTF8Find_UnitTest.cpp
tests/unit/cpp/from_code_point/: ASCIIFromCodePoint_UnitTest.cpp  UTF8FromCodePoint_UnitTest.cpp
tests/unit/cpp/symbol_to_byte_index/: UTF8SymbolToByteIndex_UnitTest.cpp
